service-mesh/yamls/keycloak/keycloak-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
  namespace: keycloak
spec:
  hosts:
  - "keycloak.gw.mesh.onap.eu"
  gateways:
  - keycloak-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: keycloak-http.keycloak.svc.cluster.local
